# dcf-valuation

./: .gitignore  README.md  pyproject.toml  requirements.txt
dcf/: __init__.py  __main__.py  app.py  auto_assumptions.py  batch.py  beta_policy.py  buybacks.py  dcf_engine.py  fcff_forecast.py  fcff_history.py  forecasting.py  io.py  normalize.py  sensitivity.py  series_tools.py  types.py  visuals.py  wacc.py  yf_data.py
