[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dcf-valuation"
version = "1.0.0"
description = "Automated intrinsic-value engine — FCFF DCF with ROIC-consistent terminal value"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "yfinance>=0.2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
dcf = "dcf.app:main"

[tool.setuptools.packages.find]
include = ["dcf*"]
